fixing right alignment

--- a/web/seeDetails.css
+++ b/web/seeDetails.css
@@ -7,6 +7,7 @@
 .info{
     padding: 12px 22px;
     float:left;
+    clear: none;
     
 }
 
